--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -46,6 +46,20 @@
   letter-spacing: 1.5px;
 }
 
+@media screen and (max-width: 500px) {
+  .text h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+  .text p {
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+  .link a {
+    font-size: 15px;
+  }
+}
+
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column;
